--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -57,6 +59,11 @@ canvas {
   margin: 15px 3px 10px 3px;
   padding: 3px 15px;
   text-align: left;
+}
+
+.grid {
+  margin-left: 45px;
+
 }
 
 .data-section {
@@ -156,4 +163,3 @@ p {
   font-weight: 200;
   font-size: 1em;
 }
-
