--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,22 @@
 @import 'variables';
 @import 'mixins';
 
+// $header-font-color: #5C75DA;
+// $body-background-color: #EAEBEF;
+// $data-card-background-color: #FEFEFE;
+//
+// $margin-none: 0;
+// $margin-5px: 5px;
+//
+
+// $box-shadow:
+
+//
+// variables for colors, fonts, etc.
+// nesting, when/where appropriate
+// color functions for ensuring a cohesive color scheme
+// at least one mixin, function or extends
+
 *,
 *:before,
 *:after {
@@ -75,10 +91,9 @@ canvas {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   width: 30%;
-}
-
-.data-section:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    &:hover {
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
 }
 
 .data-heading {
