--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -32,7 +32,7 @@ body {
 }
 
 h2 {
-  font-size: 2em;
+  @include font-size(2em);
   @include font-weight(300);
   color: $header-font-color;
   letter-spacing: .9px
@@ -56,7 +56,7 @@ canvas {
   background-color: $header-font-color;
   border-radius: 3px;
   float: right;
-  font-size: 10px;
+  @include font-size(10px);
   margin: $margin-5px;
   padding: 3px 5px;
   width: 175px;
@@ -67,7 +67,7 @@ canvas {
 .logo {
   align-items: center;
   display: inline-block;
-  font-size: 20px;
+  @include font-size(20px);
   margin: $margin-none;
   width: 83%;
 }
@@ -98,7 +98,7 @@ canvas {
 
 .data-heading {
   margin: 0px 0px 15px 0px;
-  font-size: 1.5em;
+  @include font-size(1.5em);
   @include font-weight(200);
   color: $header-font-color;
   letter-spacing: 1px;
@@ -116,7 +116,7 @@ canvas {
 }
 
 .subtext {
-  font-size: 10px;
+  @include font-size(10px);
   @include font-weight(700);
   margin: $margin-5px;
   color: $header-font-color;
@@ -172,10 +172,10 @@ img {
 
 h4 {
   @include font-weight(600);
-  font-size: 1em;
+  @include font-size(1em);
 }
 
 p {
   @include font-weight(200);
-  font-size: 1em;
+  @include font-size(1em);
 }
