--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -48,7 +48,6 @@ canvas {
 }
 
 .welcome-section {
-  grid-area: welcome;
   margin-bottom: 10px;
 }
 
@@ -80,7 +79,27 @@ canvas {
 }
 
 .grid {
-  margin-left: 45px;
+  display: grid;
+  height: 100vh;
+  grid-template-areas:
+  "column1 column2 column3"
+  "column1 column2 column3"
+  "column1 column2 column3";
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin-left: 15px;
+}
+
+.grid-column1 {
+  grid-area: column1;
+}
+
+.grid-column2 {
+  grid-area: column2;
+}
+
+.grid-column3 {
+  grid-area: column3;
 }
 
 .data-section {
@@ -90,7 +109,7 @@ canvas {
   padding: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  width: 30%;
+  width: 93%;
     &:hover {
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
