--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,3 +5,17 @@
 @mixin font-size($size) {
   font-size: $size;
 }
+
+@mixin margin($top, $right, $bottom, $left) {
+  margin-top: $top;
+  margin-right: $right;
+  margin-bottom: $bottom;
+  margin-left: $left;
+}
+
+@mixin padding($top, $right, $bottom, $left) {
+  padding-top: $top;
+  padding-right: $right;
+  padding-bottom: $bottom;
+  padding-left: $left;
+}
