Add foundation for media query mixins

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -19,3 +19,23 @@
   padding-bottom: $bottom;
   padding-left: $left;
 }
+
+@mixin size-xs {
+  @media (max-width: 599px) { @content; }
+}
+
+@mixin size-sm {
+  @media (min-width: 600px) { @content; }
+}
+
+@mixin size-md {
+  @media (min-width: 900px) { @content; }
+}
+
+@mixin size-lg {
+  @media (min-width: 1200px) { @content; }
+}
+
+@mixin size-xl {
+  @media (min-width: 1800px) { @content; }
+}
