--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,7 +62,7 @@ canvas {
 
 .grid {
   display: grid;
-  height: 100vh;
+  height: 120vh;
   grid-template-areas:
   "column1 column2 column3"
   "column1 column2 column3"
@@ -87,7 +87,7 @@ canvas {
 .data-section {
   background-color: #FEFEFE;
   border-radius: 3px;
-  margin: 5px;
+  margin: 5px 5px 20px 5px;
   padding: 15px 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
