Make minor styling changes to mobile MQ

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -268,7 +268,7 @@ p {
   }
 
   .border {
-    margin: 43px 5px 0 auto;
+    margin: 20px 5px 0 auto;
     height: 106px;
   }
 
@@ -283,6 +283,7 @@ p {
   .number-of-steps-goal,
   .avg-number-of-steps-goal {
     font-size: 1em;
+    margin-top: 13px;
   }
 
   .avg-number-of-steps-goal {
