Add form scaffolding and post blueprint

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -168,3 +168,10 @@ img {
 p {
   @include font-look(3.5em, 200);
 }
+
+form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
