--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -173,7 +173,8 @@ form {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
+  height: 300px;
 }
 
 .hydration-form {
@@ -201,13 +202,21 @@ form {
 
 }
 
+label {
+  margin-bottom: 10px;
+}
+
+.input-container {
+  text-indent: 3px;
+  text-align: left;
+  width: 100%;
+}
+
 input {
+  height: 30px;
   width: 90%;
-    &:invalid {
-  border: 2px dashed red;
-    }
     &:valid {
-    border: 2px solid black;
+    border: 3px solid green;
     }
 }
 
