Style page for laptop screens

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,4 @@
 $header-font-color: #5C75DA;
-$body-background-color: #EAEBEF;
 $data-card-background-color: #FEFEFE;
+$body-background-color: #322C65;
+$yellow-data-info: #F2BC33;
