--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,9 +10,9 @@
 body {
   background-color: $body-background-color;
   font-family: 'Open Sans', sans-serif;
-  @include margin(0px, 0px, 0px, 0px);
+  margin: 0;
   min-width: 320px;
-  @include padding(10px, 10px, 10px, 10px);
+  padding: 10px;
 }
 
 h1 {
@@ -31,7 +31,7 @@ canvas {
 }
 
 .welcome-section {
-  @include margin(0px, 0px, 10px, 0px);
+  margin-bottom: 10px;
   padding-right: 85px;
 }
 
@@ -39,16 +39,16 @@ canvas {
   background-color: $header-font-color;
   border-radius: 3px;
   float: right;
-  @include margin(5px, 5px, 5px, 5px);
-  @include padding(3px, 5px, 3px, 5px);
+  margin: 5px;
+  padding: 3px 5px;
   color: $body-background-color;
   @include font-look(3em, 600);
 }
 
 .welcome-message {
   border-radius: 3px;
-  @include margin(15px, 3px, 10px, 3px);
-  @include padding(3px, 15px, 3px, 45px);
+  margin: 15px, 3px, 10px, 3px);
+  padding: 3px 15px 3px 45px;
   text-align: left;
 }
 
@@ -61,7 +61,7 @@ canvas {
   "column1 column2 column3";
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  @include margin(0px, 0px, 0px, 15px);
+  margin-left: 15px;
 }
 
 .grid-column1 {
@@ -79,8 +79,8 @@ canvas {
 .data-section {
   background-color: $data-card-background-color;
   border-radius: 3px;
-  @include margin(5px, 5px, 20px, 5px);
-  @include padding(15px, 15px, 15px, 15px);
+  margin: 5px 5px 20px 5px;
+  padding: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   width: 93%;
@@ -90,36 +90,36 @@ canvas {
 }
 
 .data-heading {
-  @include margin(5px, 0px, 15px, 10px);
+  margin: 5px 0px 15px 10px;
   @include font-look(6em, 200);
   color: $header-font-color;
   letter-spacing: 1px;
 }
 
 .data-article {
-  @include margin(40px, 0px, 40px, 0px);
+  margin: 40px, 0px:
   text-align: center;
 }
 
 .data-text {
-  @include margin(15px, 15px, 15px, 15px);
+  margin: 15px;
   @include font-look(3.5em, 300);
 }
 
 .subtext {
   @include font-look(3em, 700);
-  @include margin(25px, 5px, 25px, 5px);
+  margin: 25px 5px;
   color: $header-font-color;
 }
 
 .number-of-steps-day {
-  @include margin(20px, auto, 50px, auto);
+  margin: 20px auto 50px auto;
   width: 280px;
   @include font-look(1.2em, 200);
 }
 
 .number-of-steps-goal {
-  @include margin(10px, 10px, 10px, 10px);
+  margin: 10px;
 }
 
 .streak-heading {
@@ -158,7 +158,7 @@ img {
 .border {
   border-right: 2px solid $header-font-color;
   height: 100px;
-  @include margin(15px, 0px, 0px, 0px);
+  margin-top: 15px;
 }
 
 .average {
@@ -197,20 +197,15 @@ form {
 .show__sleep--btn {
   height: 100%;
     &:hover {
-      background-color: #4C8BE4;
-      border: 1px solid black;
-      color: white;
+      @include btn-hover(#4C8BE4, 1px solid black, white)
     }
 }
 
 .activity__submit--btn,
 .hydration__submit--btn,
 .sleep__submit--btn {
-
     &:hover {
-      background-color: #4C8BE4;
-      border: 1px solid black;
-      color: white;
+      @include btn-hover(#4C8BE4, 1px solid black, white)
     }
 }
 
