--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -47,7 +47,7 @@ canvas {
 
 .welcome-message {
   border-radius: 3px;
-  margin: 15px, 3px, 10px, 3px);
+  margin: 15px 3px 10px 3px;
   padding: 3px 15px 3px 45px;
   text-align: left;
   font-size: 2.5em;
@@ -113,7 +113,7 @@ canvas {
 }
 
 .data-subsection {
-  margin: 40px, 0px:
+  margin: 40px 0px;
   text-align: center;
 }
 
@@ -276,6 +276,7 @@ input {
     &:valid {
     border: 3px solid green;
     }
+}
 
 .highest-step-name {
   color: $yellow-data-info;
