--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -41,13 +41,12 @@ canvas {
   float: right;
   margin: 5px;
   padding: 3px 5px;
-  color: $body-background-color;
   @include font-look(2.2em, 600);
 }
 
 .welcome-message {
   border-radius: 3px;
-  margin: 15px, 3px, 10px, 3px);
+  margin: 15px, 3px, 10px, 3px;
   padding: 3px 15px 3px 45px;
   text-align: left;
   font-size: 2.5em;
@@ -113,7 +112,7 @@ canvas {
 }
 
 .data-subsection {
-  margin: 40px, 0px:
+  margin: 40px, 0px;
   text-align: center;
 }
 
@@ -276,6 +275,7 @@ input {
     &:valid {
     border: 3px solid green;
     }
+}
 
 .highest-step-name {
   color: $yellow-data-info;
