--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -41,7 +41,7 @@ canvas {
   float: right;
   margin: 5px;
   padding: 3px 5px;
-  @include font-look(2.2em, 600);
+  @include font-look(210%, 600);
 }
 
 .welcome-message {
@@ -279,6 +279,29 @@ input {
 
 .highest-step-name {
   color: $yellow-data-info;
+}
+
+@media screen and (max-width: 870px) {
+  .grid {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+  }
+
+  .welcome-message {
+    padding: 0;
+  }
+
+  .date {
+    font-size: 185%;
+  }
+
+  .name-date-wrapper {
+    flex-direction: column-reverse;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 600px) {
