--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -285,7 +285,7 @@ input {
   .grid {
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
+    margin-left: 10%;
   }
 
   .welcome-message {
@@ -301,6 +301,11 @@ input {
     padding: 0;
     margin: 0;
     align-items: center;
+  }
+
+  .data-section {
+    width: 80%;
+    
   }
 }
 
@@ -323,14 +328,14 @@ input {
   .name-date-wrapper {
     display: flex;
     flex-direction: column-reverse;
+    text-align: center;
   }
 
   .date {
     width: 65%;
     height: 30px;
-    font-size: .8em;
+    font-size: 1.1em;
     color: #fff;
-    float: left;
     margin-bottom: 0;
   }
 
@@ -338,10 +343,7 @@ input {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    font-size: 170%;
-    width: 100%;
-    margin-left: -38px;
-    margin-bottom: -5px;
+    font-size: 195%;
   }
 
   .grid {
