Correct accessibility audit issues and miscalculation of average user data

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$header-font-color: #5C75DA;
+$headings-font-color: #5C75DA;
 $data-card-background-color: #FEFEFE;
 $body-background-color: #322C65;
-$yellow-data-info: #F2BC33;
+$yellow-data-info: #0B7502;
