--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,7 +17,7 @@ body {
 
 h1 {
   @include font-look(3em, 700);
-  color: #EAEBEF;
+  color: $data-card-background-color;
   margin-top: 0;
   text-align: center;
 }
@@ -50,7 +50,7 @@ canvas {
   padding: 3px 15px 3px 45px;
   text-align: left;
   font-size: 2.5em;
-  color: #EAEBEF;
+  color: $data-card-background-color;
 }
 
 .italic-name {
@@ -63,7 +63,7 @@ canvas {
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: baseline;
-  color: #EAEBEF;
+  color: $data-card-background-color;
 }
 
 .grid {
@@ -99,15 +99,15 @@ canvas {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   width: 93%;
-    &:hover {
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    &:focus {
+      box-shadow: 10px 10px 5px #0B7502, -10px -10px 5px #0B7502;
     }
 }
 
 .data-heading {
   margin-top: 0;
   @include font-look(2.5em, 200);
-  color: $header-font-color;
+  color: $headings-font-color;
   letter-spacing: 1px;
 }
 
@@ -125,7 +125,7 @@ canvas {
 .subtext {
   @include font-look(2em, 700);
   margin: 25px 5px;
-  color: $header-font-color;
+  color: $headings-font-color;
 }
 
 .dates,
@@ -206,7 +206,7 @@ img {
 }
 
 .border {
-  border-right: 2px solid $header-font-color;
+  border-right: 2px solid $headings-font-color;
   height: 105px;
   margin-top: 5px;
 }
@@ -306,7 +306,7 @@ input {
     width: 65%;
     height: 30px;
     font-size: .8em;
-    color: #fff;
+    color: $data-card-background-color;
     float: left;
     margin-bottom: 0;
   }
